reworked path handling

--- a/example_access_exd_api.ipynb
+++ b/example_access_exd_api.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "import_file_url = pathlib.Path(data_file_path).as_uri().replace('///', '//')\n",
+    "import_file_url = pathlib.Path(data_file_path).as_uri()\n",
     "import_file_parameters=\"\"\n",
     "print(import_file_url)\n",
     "\n",
