fix: adjusted notebook

--- a/example_access_exd_api.ipynb
+++ b/example_access_exd_api.ipynb
@@ -16,23 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d55852a6-abe0-4af2-91a9-e311e33deadb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    from odsbox.proto import ods_external_data_pb2 as exd\n",
-    "except:\n",
-    "    # first time you need to install dependencies\n",
-    "    !python -m pip install --upgrade pip\n",
-    "    !python -m pip install -U odsbox[exd-data]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c1b80c2f-5830-425b-909e-fd2cf5b895d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +27,7 @@
     "import grpc\n",
     "from google.protobuf.json_format import MessageToJson\n",
     "\n",
-    "from odsbox.proto import ods_pb2\n",
-    "from odsbox.proto import ods_external_data_pb2 as exd\n",
-    "from odsbox.proto import ods_external_data_pb2_grpc as exd_grpc"
+    "from ods_exd_api_box import ods, exd_api, exd_grpc\n"
    ]
   },
   {
@@ -122,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1052,14 +1035,14 @@
     "    stub = exd_grpc.ExternalDataReaderStub(channel)\n",
     "\n",
     "    # import file into ASAM ODS Server physical storage\n",
-    "    import_identifier = exd.Identifier(\n",
+    "    import_identifier = exd_api.Identifier(\n",
     "        url=import_file_url,\n",
     "        parameters=import_file_parameters)\n",
     "\n",
     "    import_handle = stub.Open(import_identifier)\n",
     "    try:\n",
     "        structure = stub.GetStructure(\n",
-    "            exd.StructureRequest(\n",
+    "            exd_api.StructureRequest(\n",
     "                handle=import_handle))\n",
     "        print(MessageToJson(structure))\n",
     "\n",
@@ -1085,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1131,14 +1114,14 @@
     "    # info from physical storage\n",
     "    access_group_id = 0\n",
     "    access_channel_ids = [0, 1]\n",
-    "    access_identifier = exd.Identifier(\n",
+    "    access_identifier = exd_api.Identifier(\n",
     "        url=access_file_url,\n",
     "        parameters=access_file_parameters)\n",
     "\n",
     "    # open bulk access\n",
     "    access_handle = stub.Open(access_identifier)\n",
     "    try:\n",
-    "        request = exd.ValuesRequest(\n",
+    "        request = exd_api.ValuesRequest(\n",
     "            handle=access_handle,\n",
     "            group_id=access_group_id,\n",
     "            channel_ids=access_channel_ids)\n",
